tests/declaration_files_haste_all/declaration_files_haste_all.exp
Error ------------------------------------------------------------------------------------------------------ test.js:7:2

Cannot cast `foo` to empty because string [1] is incompatible with empty [2].

   test.js:7:2
   7| (foo: empty); // error: should be string
       ^^^

References:
   bar.js.flow:1:19
   1| export const foo: string = "i'm the .flow file";
                        ^^^^^^ [1]
   test.js:7:7
   7| (foo: empty); // error: should be string
            ^^^^^ [2]



Found 1 error
